# cryypt

./: .gitignore  ARCHITECTURE.md  Cargo.toml  FIXES_SUMMARY.md  README.md  TODO.md  TODO_PRODUCTION.md  TURD.md  all_dependencies.md  check_sizes.rs  clippy_current.txt  clippy_full_output.txt  clippy_warnings.txt  dependency_versions.txt  fix_clippy_bulk.sh  fix_format_args.sh  justfile  test_client_interface.rs  test_key_api.rs  test_readme_pattern.rs  unique_dependencies_list.txt  vault-errors.txt  verify_jwt.rs
cipher/: Cargo.toml  README.md
cipher/src/: chunk_macro.rs  cipher_result.rs  error.rs  lib.rs  result_macro.rs
cipher/src/cipher/: algorithm.rs  encryption_result.rs  nonce.rs
cipher/src/cipher/api/: aes_builder.rs  builder_traits.rs  chacha_builder.rs  cipher.rs  decryption_builder.rs  mod.rs  states.rs
cipher/src/cipher/api/aes_builder/: aad.rs  decrypt.rs  encrypt.rs  mod.rs  stream.rs  stream_operations.rs
cipher/src/cipher/api/chacha_builder/: decrypt.rs  encrypt.rs  mod.rs  stream.rs
cipher/src/cipher/api/cipher_builder_traits/: advanced.rs  base.rs  data.rs  mod.rs
cipher/tests/: aes_tests.rs  chacha_tests.rs  encrypt_decrypt_test.rs  encryption_result_test.rs  integration_tests.rs
common/: Cargo.toml
common/src/: builder_components.rs  builder_traits.rs  dsl.rs  error.rs  handlers.rs  lib.rs  macros.rs  traits.rs
common/src/chunk_types/: key.rs  mod.rs  vault.rs
common/src/error/: mod.rs
cryypt/: Cargo.toml
cryypt-vault/: Cargo.toml
cryypt-vault/src/: config.rs  core.rs  error.rs  local.rs  logging.rs  operation.rs
cryypt-vault/src/core/: vault.rs
cryypt-vault/src/db/: dao.rs  document.rs  migrations.rs  mod.rs  stream.rs  vault_store.rs
cryypt-vault/src/db/vault_store/: mod.rs
cryypt-vault/src/local/: batch.rs  encryption.rs  vault.rs
cryypt-vault/src/operation/: response.rs
cryypt-vault/src/tui/: app.rs  aws_interface.rs  cli.rs  events.rs  main.rs  mod.rs  types.rs  ui.rs
cryypt-vault/src/tui/aws_interface/: manager.rs
cryypt-vault/src/tui/cli/: mod.rs  run_command.rs
cryypt-vault/src/tui/main/: mod.rs
cryypt-vault/src/tui/tabs/: add.rs  aws_secrets.rs  pass.rs
cryypt-workspace-hack/: Cargo.toml
cryypt/examples/: client_interface.rs
cryypt/src/: lib.rs  master.rs
cryypt/src/master/: core.rs  quic.rs  vault.rs  vault_impl.rs
cryypt/tests/: compression_handler_verification_test.rs  error_handler_verification_test.rs
examples/: Cargo.toml  TODO.md  hashing.rs  jwt.rs  jwt_async_usage.rs  nonce.rs  pqcrypto.rs  secure_file_transfer.rs  simple_file_transfer.rs
examples/src/: advanced_patterns.rs  cipher_api.rs  combined_operations.rs  compression.rs  compression_api.rs  encryption.rs  file_operations.rs  hashing.rs  hashing_api.rs  jwt.rs  jwt_api.rs  key_api.rs  lib.rs  nonce.rs  pqcrypto.rs  pqcrypto_api.rs  quic_api.rs  quiq.rs  simple_delete_test.rs  streaming_operations.rs  test_decompress_pattern.rs  test_fluent_compression.rs  test_fluent_streaming.rs  vault_api.rs
examples/src/file_operations/: batch.rs  high_level.rs  mod.rs  single.rs  streaming.rs
hashing/: Cargo.toml  README.md
hashing/benches/: hash_benchmarks.rs
hashing/src/: async_result.rs  chunk_macro.rs  error.rs  hash_result.rs  lib.rs  mod.rs  result_macro.rs  streaming.rs
hashing/src/api/: blake2b_builder.rs  blake3_builder.rs  builder_traits.rs  hash.rs  hash_builder.rs  hash_functions.rs  mod.rs  passes.rs  sha256_builder.rs  sha3_builder.rs  states.rs
hashing/src/api/hash/algorithms/: sha256.rs  sha3.rs
hashing/src/api/hash_builder/: blake2b.rs  common.rs  mod.rs  sha256.rs  sha3.rs  stream.rs
hashing/src/api/sha256_builder/: compute.rs  mod.rs  stream.rs
hashing/tests/: hashing_tests.rs
quic/: Cargo.toml  README.md
quic/src/: builder.rs  client.rs  error.rs  keys.rs  lib.rs  quic_conn.rs  quic_result.rs  server.rs
quic/src/api/: mod.rs  quic_master_builder.rs  server.rs
quic/src/api/quic_api/: streams.rs
quic/src/protocols/: messaging.rs  messaging_mod.rs  rpc.rs
quic/src/protocols/file_transfer/: mod.rs  receiver.rs  sender.rs
quic/src/protocols/file_transfer/sender/: helpers.rs  server.rs
quic/src/protocols/messaging/: builders.rs  message_processing.rs  protocol_core.rs  server.rs  types.rs
quic/src/protocols/messaging/server/: config.rs  core.rs  mod.rs
quic/src/quic/: config.rs  connection.rs  messaging.rs  mod.rs  rpc.rs  server.rs  stream.rs  stream_dispatcher.rs
quic/src/quic/file_transfer/: download.rs  types.rs  upload.rs
quic/src/tls/: crl_cache.rs  errors.rs  http_client.rs  key_encryption.rs  mod.rs  ocsp.rs  tls_config.rs  tls_manager.rs  types.rs
quic/src/tls/builder/: authority.rs  certificate.rs
quic/src/tls/certificate/: generation.rs  parser.rs  parsing.rs  validation.rs
vault/: Cargo.toml  README.md  TODO.md
vault/src/: config.rs  core.rs  error.rs  lib.rs  local.rs  logging.rs  main.rs  operation.rs
vault/src/api/: error_recovery.rs  mod.rs  stream_manager.rs  ttl_operations.rs  vault_operations.rs
vault/src/core/: mod.rs  types.rs  vault.rs
vault/src/db/: dao.rs  db.rs  document.rs  error.rs  migrations.rs  mod.rs  vault_store.rs
vault/src/db/dao/: documents.rs  mod.rs  queries.rs
vault/src/db/dao/documents/: core.rs  mod.rs
vault/src/db/vault_store/: backend.rs  cache.rs  mod.rs  transactions.rs
vault/src/local/: encryption.rs  mod.rs  search.rs  storage.rs
vault/src/tui/: app.rs  aws_interface.rs  cli.rs  events.rs  main.rs  mod.rs  pass_interface.rs  types.rs
vault/src/tui/app/: app.rs  events.rs
vault/src/tui/aws_interface/: client.rs  manager.rs  mod.rs  secrets.rs  types.rs
vault/src/tui/cli/: commands.rs  data_ops.rs  key_ops.rs  mod.rs  passphrase_operations.rs  query_operations.rs  run_command.rs  security_ops.rs  unlock_operations.rs  vault_ops.rs
vault/src/tui/events/: input_mode.rs  mod.rs  normal_mode.rs  terminal_setup.rs
vault/src/tui/main/: commands.rs  ui.rs
vault/src/tui/tabs/: aws_secrets.rs  help.rs  keys.rs  pass.rs  search.rs  settings.rs
vault/tests/: cache_system_test.rs  decomposed_modules_test.rs
(+369 files in other folders)
