[package]
name = "cryypt_cipher"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "typesafe builder for encryption decryption, compression, hashing primitives in Rust"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["aes", "chacha20"]
aes = []
chacha20 = []

[dependencies]
cryypt-workspace-hack = { path = "../cryypt-workspace-hack"}
arc-swap = "1.7.1"
rand = { version = "0.9.1", features = ["std", "std_rng"] }
zeroize = "1.8.1"
thiserror = "2.0.12"
serde = "1.0.219"
serde_json = "1.0.140"
base64 = "0.22.1"
hex = "0.4.3"
once_cell = "1.21.3"
tokio = { version = "1.46.1", features = ["sync", "rt", "macros", "fs", "io-util", "net"] }
tokio-stream = "0.1.17"
futures = "0.3.31"
dashmap = "7.0.0-rc2"
p256 = { version = "0.14.0-pre.8", features = ["ecdsa", "pkcs8"] }
hmac = "0.13.0-rc.0"
base64-url = "3.0.0"
getrandom = "0.3.3"
twox-hash = "2.1.1"
hkdf = "0.13.0-rc.0"
subtle = "2.6.1"
chrono = { version = "0.4.41", features = ["serde"] }
tracing = "0.1.41"
bzip2 = "0.6.0"
aes-gcm = "0.11.0-rc.0"
chacha20poly1305 = "0.11.0-rc.0"
sha2 = "0.11.0-rc.0"
sha3 = "0.11.0-rc.0"
blake2 = "0.11.0-rc.0"
argon2 = "0.6.0-rc.0"
keyring = "4.0.0-rc.1"
flate2 = "1.1.2"
zstd = "0.13.3"
zip = "4.2.0"
rand_core = "0.9.3"
quiche = "0.24.4"
pqcrypto = "0.18.1"
pqcrypto-mlkem = "0.1.0"
pqcrypto-mldsa = "0.1.1"
pqcrypto-falcon = "0.4.0"
pqcrypto-sphincsplus = "0.7.1"
pqcrypto-traits = "0.3.5"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
bincode = "2.0.1"
cryypt_compression = { path = "../compression" }
cryypt_key = { path = "../key" }

[dev-dependencies]
tokio = { version = "1.46.1", features = ["full"] }
criterion = "0.6.0"
proptest = "1.7.0"
hex-literal = "1.0.0"
env_logger = "0.11.8"
log = "0.4.27"

[lib]
name = "cryypt_cipher"
path = "src/lib.rs"
