[package]
name = "cryypt_common"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.12"
anyhow = "1.0.98"
tracing = "0.1.41"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
backtrace = "0.3.75"
once_cell = "1.21.3"

[features]
default = ["full-backtrace"]
full-backtrace = []