[package]
name = "cryypt_vault"
version = "0.1.0"
edition = "2024"

[dependencies]
cryypt_cipher = { workspace = true }
cryypt_hashing = { workspace = true }
cryypt_jwt = { workspace = true }
cryypt_key = { workspace = true }
cryypt_pqcrypto = { workspace = true }
cryypt_quiq = { workspace = true }

# Core workspace dependencies
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
futures-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
surrealdb = { workspace = true }
surrealdb-migrations = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
time = { workspace = true }
pin-project = { workspace = true }
secrecy = { workspace = true }
argon2 = { workspace = true }


[[bin]]
name = "cryypt"
path = "src/tui/main.rs"
