# This file is part of the cryypt workspace-hack package.
# It contains all dependencies used anywhere in the workspace to optimize builds.

[package]
name = "cryypt-workspace-hack"
version = "0.1.0"
edition = "2021"
description = "workspace-hack package for cryypt"
publish = false

[dependencies]
# Async/Runtime
tokio = { version = "1.46.1", features = ["full"] }
futures = { version = "0.3.31" }
futures-core = { version = "0.3.31" }
futures-io = { version = "0.3.31" }
futures-sink = { version = "0.3.31" }
tokio-stream = { version = "0.1.17" }

# Serialization
serde = { version = "1.0.219", features = ["alloc", "derive", "rc"] }
serde_json = { version = "1.0.140", features = ["alloc", "preserve_order"] }
bincode = { version = "2.0.1" }

# Error Handling
thiserror = { version = "2.0.12" }
anyhow = { version = "1.0.98" }

# Cryptography
aes = { version = "0.9.0-rc.0" }
aes-gcm = { version = "0.11.0-rc.0" }
chacha20poly1305 = { version = "0.11.0-rc.0" }
argon2 = { version = "0.6.0-rc.0" }
crypto-common = { version = "0.2.0-rc.3", default-features = false, features = ["rand_core"] }
p256 = { version = "0.14.0-pre.8" }

# Hashing
sha2 = { version = "0.11.0-rc.0" }
sha3 = { version = "0.11.0-rc.0" }
blake2 = { version = "0.11.0-rc.0" }
blake2b_simd = { version = "1.0.3" }
blake3 = { version = "1.8.2" }
digest = { version = "0.11.0-rc.0", features = ["mac", "oid"] }
hmac = { version = "0.13.0-rc.0", default-features = false }
hkdf = { version = "0.13.0-rc.0" }

# Compression
zstd = { version = "0.13.3" }
flate2 = { version = "1.1.2" }
bzip2 = { version = "0.6.0" }
zip = { version = "4.2.0" }

# CLI/TUI
clap = { version = "4.5.40", features = ["derive"] }
clap_builder = { version = "4.5.40", default-features = false, features = ["color", "help", "std", "suggestions", "usage"] }
clap_complete = { version = "4.5.54" }
ratatui = { version = "0.30.0-alpha.5" }
crossterm = { version = "0.29.0" }
dialoguer = { version = "0.11.0" }

# Logging/Tracing
tracing = { version = "0.1.41" }
tracing-core = { version = "0.1.34" }
log = { version = "0.4.27", default-features = false, features = ["std"] }

# Utilities
bytes = { version = "1.10.1", features = ["serde"] }
chrono = { version = "0.4.41" }
rand = { version = "0.9.1", features = ["small_rng"] }
rand_core = { version = "0.9.3", default-features = false, features = ["std"] }
hex = { version = "0.4.3" }
hex-literal = { version = "1.0.0" }
base64 = { version = "0.22.1" }
base64-url = { version = "3.0.0" }
base64ct = { version = "1.8.0", default-features = false, features = ["std"] }
uuid = { version = "1.17.0" }
regex = { version = "1.11.1" }
regex-automata = { version = "0.4.9", default-features = false, features = ["dfa-onepass", "hybrid", "meta", "nfa-backtrack", "perf", "unicode"] }
once_cell = { version = "1.21.3" }
itertools = { version = "0.14.0" }
either = { version = "1.15.0", features = ["use_std"] }
indexmap = { version = "2.10.0", features = ["serde"] }
smallvec = { version = "1.15.1", default-features = false, features = ["const_generics", "union"] }
memchr = { version = "2.7.5" }
shellexpand = { version = "3.1.1" }
unicode-xid = { version = "0.2.6" }
time = { version = "0.3.41", features = ["formatting", "macros", "parsing", "serde"] }
deranged = { version = "0.4.0", default-features = false, features = ["powerfmt", "serde", "std"] }

# Security
keyring = { version = "4.0.0-rc.1" }
zeroize = { version = "1.8.1", features = ["derive"] }
secrecy = { version = "0.10.3" }
password-hash = { version = "0.5.0", features = ["std"] }
pbkdf2 = { version = "0.12.2", features = ["simple"] }
subtle = { version = "2.6.1" }

# AWS
aws-config = { version = "1.8.1" }
aws-sdk-secretsmanager = { version = "1.78.0" }

# Database
surrealdb = { version = "2.3.6" }
surrealdb-migrations = { version = "2.3.0" }

# Concurrency
dashmap = { version = "7.0.0-rc2" }
crossbeam-channel = { version = "0.5.15" }
arc-swap = { version = "1.7.1" }
pin-project = { version = "1.1.10" }

# System
dirs = { version = "6.0.0" }
getrandom = { version = "0.3.3", default-features = false, features = ["std"] }

# Type system
generic-array = { version = "1.2.0", default-features = false, features = ["zeroize"] }
num-traits = { version = "0.2.19", features = ["i128", "libm"] }

# Parser/Compiler
lalrpop-util = { version = "0.22.2", features = ["lexer"] }
proc-macro2 = { version = "1.0.95" }
quote = { version = "1.0.40" }
syn = { version = "2.0.104", features = ["extra-traits", "fold", "full", "visit", "visit-mut"] }

# Hashing (non-crypto)
hashbrown = { version = "0.15.4", default-features = false, features = ["inline-more"] }
twox-hash = { version = "2.1.1" }
string_cache = { version = "0.8.9" }
phf_shared = { version = "0.12.1", features = ["unicase"] }

# Network/QUIC
quiche = { version = "0.24.4" }

# Post-quantum crypto
pqcrypto = { version = "0.18.1" }
pqcrypto-falcon = { version = "0.4.0" }
pqcrypto-mldsa = { version = "0.1.1" }
pqcrypto-mlkem = { version = "0.1.0" }
pqcrypto-sphincsplus = { version = "0.7.1" }
pqcrypto-traits = { version = "0.3.5" }

# Legacy (consider replacing)
atty = { version = "0.2.14" }

# Testing
criterion = { version = "0.6.0" }
proptest = { version = "1.7.0" }
env_logger = { version = "0.11.8" }
tempfile = { version = "3.20.0" }

### BEGIN HAKARI SECTION
# Hakari-managed dependencies will be inserted here
### END HAKARI SECTION