[package]
name = "cryypt_quic"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
arc-swap = "1.7.1"
rand = "0.9.1"
zeroize = "1.8.1"
thiserror = "2.0.12"
serde = "1.0.219"
serde_json = "1.0.140"
base64 = "0.22.1"
hex = "0.4.3"
once_cell = "1.21.3"
tokio = "1.46.1"
tokio-stream = "0.1.17"
futures = "0.3.31"
dashmap = "6.1.0"
p256 = "0.13.2"
hmac = "0.12.1"
base64-url = "3.0.0"
getrandom = "0.3.3"
twox-hash = "2.1.1"
hkdf = "0.12.4"
subtle = "2.6.1"
chrono = "0.4.41"
tracing = "0.1.41"
bzip2 = "0.6.0"
aes-gcm = "0.10.3"
chacha20poly1305 = "0.10.1"
sha2 = "0.10.9"
sha3 = "0.10.8"
blake2b_simd = "1.0.2"
digest = "0.10.7"
argon2 = "0.5.3"
keyring = "3.6.2"
flate2 = "1.1.2"
zstd = "0.13.3"
zip = "4.2.0"
rand_core = "0.9.3"
quiche = "0.24.4"
pqcrypto = "0.18.1"
pqcrypto-mlkem = "0.1.0"
pqcrypto-mldsa = "0.1.1"
pqcrypto-falcon = "0.4.0"
pqcrypto-sphincsplus = "0.7.1"
pqcrypto-traits = "0.3.5"
uuid = "1.17.0"
bincode = "2.0.1"
cryypt_hashing = { path = "../hashing" }

[dev-dependencies]
tokio = "1.46.1"
criterion = "0.6.0"
proptest = "1.7.0"
hex-literal = "1.0.0"


[[example]]
name = "quic"
path = "../examples/src/quic.rs"
