[package]
name = "cryypt-vault"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core workspace dependencies
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
futures-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
surrealdb = { workspace = true }
surrealdb-migrations = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
time = { workspace = true }
pin-project = { workspace = true }
secrecy = { workspace = true }
secretrust-core = { workspace = true }

[[bin]]
name = "cryypt"
path = "src/tui/main.rs"
